# titulacon

./: .env  Alumnos_exportados.xlsx  Plantilla de grupo.xlsx  Plantilla_D_2.xlsx  README.md  Reporte_25308060610151_AGUILAR.xlsx  alumnos.xlsx  pyproject.toml
src/: main.py
src/controllers/: ActividadController.py  AlumnoController.py  CalificacionController.py  EstadisticasController.py  GrupoController.py  ReporteController.py  RiesgoController.py  TareaController.py  UserController.py
src/database/: edumind.sql  edumind1.sql  gestor_tareas.sql
src/models/: AlumnoModel.py  CalificacionModel.py  EstadisticasModel.py  GrupoModel.py  MateriaModel.py  ReporteModel.py  RiesgoModel.py  Tareas.py  Users.py  database.py  schemas.py  schemasModel.py
src/views/: EstadisticasView.py  actividadesView.py  altaAlumnoView.py  alumnoView.py  asistenciasView.py  calificacionView.py  dashboardView.py  grupoView.py  loginView.py  menuView.py  registerView.py  reporteView.py  riesgoView.py
