[project]
name = "mvc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "flet==0.24.1",
    "mysql-connector>=2.2.9",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.2",
]
[project.scripts]

app= "main:main"

[tool.uv]
package = true
[tool.setuptools.package-dir]
""="src"
